# de_design_patterns

./: .gitignore  README.md  docker-compose.yaml  pytest.ini
airflow/config/: airflow.cfg  connections.json  variables.json
airflow/dags/: spark_test.py
airflow/dags/idempotency/data_overwrite/: data_overwrite.py
airflow/dags/idempotency/fast_metadata_cleaner/: fast_metadata_cleaner.py
code/build_common/code_executor/: execute_python.sh
code/common/: README.md  pyproject.toml
code/common/base/: strategy.py
code/common/common_utilities/: common_utilities.py
code/common/standards/gen_job/: gen_job.py
code/common/standards/gen_job/data_configurator/: pipeline_sources.py
code/common/standards/gen_job/utilities/: pipeline_enums.py
code/patterns/idempotent/: pyproject.toml
code/patterns/idempotent/data_overwrite/: data_overwrite_entrypoint.py
code/patterns/idempotent/data_overwrite/scripts/: build_unit_test.sh
code/patterns/idempotent/data_overwrite/src/: data_overwrite_constants.py  data_overwrite_job.py  data_overwrite_utilities.py
code/patterns/idempotent/data_overwrite/tests/: tests_constants.py
code/patterns/idempotent/data_overwrite/tests/unit/: test_data_overwrite_utilities.py
code/patterns/idempotent/fast_metadata_cleaner/: create_partition_table.py
code/patterns/spark_test/: spark_test.py
data/idempotent/data_overwrite/: data_generator.py
data/idempotent/data_overwrite/user_activity/: .part-00000-44c84ff3-a6fd-4eb9-926a-2a5fd18017ad-c000.snappy.parquet.crc  .part-00000-7f67c952-83b6-43d3-921d-1c913b344ce2-c000.snappy.parquet.crc  .part-00000-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet.crc  .part-00000-be95c3e5-74f3-43d0-a91e-560b4d688314-c000.snappy.parquet.crc  .part-00001-7f67c952-83b6-43d3-921d-1c913b344ce2-c000.snappy.parquet.crc  .part-00001-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet.crc  .part-00001-be95c3e5-74f3-43d0-a91e-560b4d688314-c000.snappy.parquet.crc  .part-00002-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet.crc  part-00000-44c84ff3-a6fd-4eb9-926a-2a5fd18017ad-c000.snappy.parquet  part-00000-7f67c952-83b6-43d3-921d-1c913b344ce2-c000.snappy.parquet  part-00000-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet  part-00000-be95c3e5-74f3-43d0-a91e-560b4d688314-c000.snappy.parquet  part-00001-7f67c952-83b6-43d3-921d-1c913b344ce2-c000.snappy.parquet  part-00001-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet  part-00001-be95c3e5-74f3-43d0-a91e-560b4d688314-c000.snappy.parquet  part-00002-9cd9b6fc-0f2d-4bc9-add5-8ccaccbe8b7b-c000.snappy.parquet
