[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "idempotent_data_overwrite"
version = "0.1.0"
authors = [
    {name = "Enrique Fonseca", email = "aesthetic.datum@gmail.com"}
]
description = "Idempotent data engineering patterns in Spark."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2wsgi==1.10.10",
    "aiosqlite==0.21.0",
    "alembic==1.16.5",
    "altair==4.2.2",
    "annotated-types==0.6.0",
    "anyio==4.3.0",
    "apache-airflow==3.0.4",
    "apache-airflow-core==3.0.4",
    "apache-airflow-providers-apache-spark==5.3.2",
    "apache-airflow-providers-common-compat==1.7.3",
    "apache-airflow-providers-common-io==1.6.2",
    "apache-airflow-providers-common-sql==1.27.5",
    "apache-airflow-providers-smtp==2.2.0",
    "apache-airflow-providers-standard==1.6.0",
    "apache-airflow-task-sdk==1.0.4",
    "argcomplete==3.6.2",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asgiref==3.9.1",
    "asttokens==2.4.1",
    "async-lru==2.0.4",
    "attrs==25.3.0",
    "babel==2.14.0",
    "backoff==2.2.1",
    "backports-strenum==1.3.1",
    "beautifulsoup4==4.12.3",
    "binaryornot==0.4.4",
    "bleach==6.1.0",
    "blinker==1.9.0",
    "cadwyn==5.4.4",
    "certifi==2024.2.2",
    "cffi==1.16.0",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.1",
    "cookiecutter==2.6.0",
    "cron-descriptor==2.0.5",
    "croniter==6.0.0",
    "cryptography==42.0.3",
    "dbldatagen==0.4.0.post1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "delta-spark==3.3.2",
    "deprecated==1.2.18",
    "dill==0.4.0",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "email-validator==2.3.0",
    "entrypoints==0.4",
    "exceptiongroup==1.2.0",
    "executing==2.0.1",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "fastapi-cloud-cli==0.1.5",
    "fastjsonschema==2.19.1",
    "findspark==2.0.1",
    "flask==3.1.2",
    "fqdn==1.5.1",
    "fsspec==2025.7.0",
    "googleapis-common-protos==1.70.0",
    "great-expectations==1.5.8",
    "greenlet==3.2.4",
    "grpcio==1.74.0",
    "grpcio-status==1.74.0",
    "gunicorn==23.0.0",
    "gx==1.0.5",
    "h11==0.14.0",
    "httpcore==1.0.3",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.6",
    "importlib-metadata==8.7.0",
    "iniconfig==2.1.0",
    "ipykernel==6.29.2",
    "ipython==8.21.0",
    "ipywidgets==8.1.2",
    "isoduration==20.11.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.1",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "json5==0.9.17",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.1",
    "jupyter-events==0.9.0",
    "jupyter-lsp==2.2.2",
    "jupyter-server==2.12.5",
    "jupyter-server-terminals==0.5.2",
    "jupyterlab==4.1.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.25.3",
    "jupyterlab-widgets==3.0.10",
    "lazy-object-proxy==1.12.0",
    "libcst==1.8.2",
    "linkify-it-py==2.0.3",
    "lockfile==0.12.2",
    "makefun==1.15.2",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.20.2",
    "matplotlib-inline==0.1.6",
    "mdurl==0.1.2",
    "methodtools==0.4.7",
    "mistune==3.0.2",
    "more-itertools==10.7.0",
    "msgspec==0.19.0",
    "nbclient==0.9.0",
    "nbconvert==7.16.1",
    "nbformat==5.9.2",
    "nest-asyncio==1.6.0",
    "notebook==7.1.0",
    "notebook-shim==0.2.4",
    "numpy==1.26.3",
    "opentelemetry-api==1.36.0",
    "opentelemetry-exporter-otlp==1.36.0",
    "opentelemetry-exporter-otlp-proto-common==1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
    "opentelemetry-exporter-otlp-proto-http==1.36.0",
    "opentelemetry-proto==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "overrides==7.7.0",
    "packaging==23.2",
    "pandas==2.1.4",
    "pandocfilters==1.5.1",
    "parameterized==0.9.0",
    "parso==0.8.3",
    "pathspec==0.12.1",
    "pendulum==3.1.0",
    "pexpect==4.9.0",
    "platformdirs==4.2.0",
    "pluggy==1.6.0",
    "posthog==6.6.0",
    "prometheus-client==0.20.0",
    "prompt-toolkit==3.0.43",
    "protobuf==6.32.0",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py4j==0.10.9.7",
    "pyarrow==15.0.0",
    "pycparser==2.21",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.17.2",
    "pyjwt==2.10.1",
    "pyparsing==3.1.1",
    "pyspark==3.5.6",
    "pytest==8.4.2",
    "python-daemon==3.1.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.1.1",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "python-ulid==2.2.0",
    "pytz==2023.3.post1",
    "pyyaml==6.0.1",
    "pyzmq==25.1.2",
    "referencing==0.33.0",
    "requests==2.31.0",
    "retryhttp==1.3.3",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.1.0",
    "rich-argparse==1.7.1",
    "rich-toolkit==0.15.0",
    "rignore==0.6.4",
    "rpds-py==0.18.0",
    "ruamel-yaml==0.17.17",
    "scipy==1.12.0",
    "send2trash==1.8.2",
    "sentry-sdk==2.35.1",
    "setproctitle==1.3.6",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.0",
    "soupsieve==2.5",
    "spyder-kernels==2.4.4",
    "sqlalchemy==1.4.54",
    "sqlalchemy-jsonfield==1.0.2",
    "sqlalchemy-utils==0.41.2",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "starlette==0.47.3",
    "structlog==25.4.0",
    "svcs==25.1.0",
    "tabulate==0.9.0",
    "tenacity==9.1.2",
    "termcolor==3.1.0",
    "terminado==0.18.0",
    "text-unidecode==1.3",
    "tinycss2==1.2.1",
    "tomli==2.0.1",
    "toolz==0.12.1",
    "tornado==6.4",
    "tqdm==4.66.2",
    "traitlets==5.14.1",
    "typer==0.16.1",
    "types-python-dateutil==2.8.19.20240106",
    "types-requests==2.32.4.20250809",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2023.4",
    "tzlocal==5.2",
    "uc-micro-py==1.0.3",
    "universal-pathlib==0.2.6",
    "uri-template==1.3.0",
    "urllib3==2.2.1",
    "uuid6==2025.0.1",
    "uv==0.9.2",
    "uvicorn==0.35.0",
    "uvloop==0.21.0",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.7.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "widgetsnbextension==4.0.10",
    "wirerope==1.0.0",
    "wrapt==1.17.3",
    "wurlitzer==3.0.3",
    "zipp==3.21.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --tb=short --showlocals"
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
console_output_style = "progress"

log_cli = "true"
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "[%(levelname)s] [%(asctime)s] [%(name)s]: %(message)s"

markers = [
    "unit",
    "integration",
    "spark"
]